--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
-header div ul li {
-    display: inline-block;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+}
+
+header {
+    height: 200px;
+    font-size: 20px;
 }
