--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,25 @@
 * {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-size: 20px;
 }
 
 header {
-    height: 200px;
-    font-size: 20px;
+    background-color: darkkhaki;
+    display:  inline-block;
+}
+
+header ul {
+    float: right;
+}
+
+header ul li {
+    display:  inline-block;
+    align-items: right;
+}
+
+header h1 {
+    font-size: 60px;
+}
+
+h1 {
+    font-size: 40px;
 }
