--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,22 +4,14 @@
 
 header {
     background-color: darkkhaki;
-    display:  inline-block;
 }
 
-header ul {
-    float: right;
+
+nav ul {
+    list-style-type: none;
+    border: 1px solid red;
 }
 
-header ul li {
-    display:  inline-block;
-    align-items: right;
-}
-
-header h1 {
-    font-size: 60px;
-}
-
-h1 {
-    font-size: 40px;
+nav li {
+    display: inline-block;
 }
