--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,26 @@
 * {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+    padding: 2px;
+    margin: 20px;
 }
 
 header {
     background-color: darkkhaki;
 }
 
+header h1 {
+    display: inline-block;
+}
+
+nav{
+    display: inline-block;
+    float: right;
+}
 
 nav ul {
     list-style-type: none;
     border: 1px solid red;
+    display: inline-block;
 }
 
 nav li {
