--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,17 +12,20 @@ header h1 {
     display: inline-block;
 }
 
-nav{
-    display: inline-block;
-    float: right;
-}
-
-nav ul {
+header ul {
     list-style-type: none;
     border: 1px solid red;
+}
+
+header li {
     display: inline-block;
 }
 
 nav li {
     display: inline-block;
+}
+
+#professional-links {
+    display: inline-block;
+    float: right;
 }
